# cmp_cmdopts_parsing

./: .gitignore  .names.sh  .targets.sh  CHANGELOG.md  Cargo.toml  README.md
comps/cmp_app/: Cargo.toml
comps/cmp_app/benches/: bench-curl.rs  bench-one.rs  bench.rs
comps/cmp_app/src/: curl.cmd.help.rs.txt  curl.cmd.lex.rs.txt  curl.rs  main-curl.rs  main-one.rs  one.rs
comps/cmp_app/tests/: test-curl.rs  test-one.rs
comps/cmp_app/xtask/: Cargo.toml
comps/cmp_app/xtask/src/: gen_src_curl_cmd.rs
comps/cmp_argh/: Cargo.toml
comps/cmp_argh/benches/: bench-curl.rs  bench-one.rs  bench.rs
comps/cmp_argh/src/: curl.cmd.help.rs.txt  curl.cmd.match.rs.txt  curl.rs  main-curl.rs  main-one.rs  one.rs
comps/cmp_argh/tests/: test-curl.rs  test-one.rs
comps/cmp_argh/xtask/: Cargo.toml
comps/cmp_argh/xtask/src/: gen_src_curl_cmd.rs
comps/cmp_args/: Cargo.toml
comps/cmp_args/benches/: bench-curl.rs  bench-one.rs  bench.rs
comps/cmp_args/src/: curl.cmd.help.rs.txt  curl.cmd.lex.rs.txt  curl.cmd.match.rs.txt  curl.rs  main-curl.rs  main-one.rs  one.rs
comps/cmp_args/tests/: test-curl.rs  test-one.rs
comps/cmp_args/xtask/: Cargo.toml
comps/cmp_args/xtask/src/: gen_src_curl_cmd.rs
comps/cmp_clap/: Cargo.toml
comps/cmp_clap/benches/: bench-curl.rs  bench-one.rs  bench.rs
comps/cmp_clap/src/: curl.cmd.help.rs.txt  curl.cmd.lex.rs.txt  curl.cmd.match.rs.txt  curl.rs  main-curl.rs  one.rs
comps/cmp_clap/tests/: test-curl.rs
comps/cmp_clap/xtask/: Cargo.toml
comps/cmp_clap3/: Cargo.toml
comps/cmp_clap3/benches/: bench-curl.rs  bench-one.rs  bench.rs
comps/cmp_clap3/src/: curl.cmd.help.rs.txt  curl.cmd.lex.rs.txt  curl.cmd.match.rs.txt  curl.rs  main-curl.rs  main-one.rs  one.rs
comps/cmp_clap3/tests/: test-curl.rs  test-one.rs
comps/cmp_clap3/xtask/: Cargo.toml
comps/cmp_clap3/xtask/src/: gen_src_curl_cmd.rs
comps/cmp_commander/: Cargo.toml
comps/cmp_commander/benches/: bench-curl.rs  bench-one.rs  bench.rs
comps/cmp_commander/src/: curl.cmd.help.rs.txt  curl.cmd.lex.rs.txt  curl.cmd.match.rs.txt  curl.rs  main-curl.rs  main-one.rs  one.rs
comps/cmp_commander/tests/: test-curl.rs  test-one.rs
comps/cmp_commander/xtask/: Cargo.toml
comps/cmp_commander/xtask/src/: gen_src_curl_cmd.rs
comps/cmp_docopt/: Cargo.toml
comps/cmp_docopt/benches/: bench-curl.rs  bench-one.rs  bench.rs
comps/cmp_docopt/src/: curl.rs  docopt.curl.cmd.help.rs.txt  main-curl.rs  main-one.rs  one.rs
comps/cmp_docopt/tests/: test-curl.rs  test-one.rs
comps/cmp_docopt/xtask/: Cargo.toml
comps/cmp_docopt/xtask/src/: docopt.curl.cmd.txt  gen_src_curl_cmd.rs
comps/cmp_flood_tide/: Cargo.toml
comps/cmp_flood_tide/benches/: bench-curl.rs  bench-one.rs  bench.rs
comps/cmp_flood_tide/src/: curl.cmd.help.rs.txt  curl.cmd.match.rs.txt  curl.rs  main-curl.rs  main-one.rs  one.rs
comps/cmp_flood_tide/tests/: test-curl.rs  test-one.rs
comps/cmp_flood_tide/xtask/: Cargo.toml
comps/cmp_flood_tide/xtask/src/: gen_src_curl_cmd.rs
comps/cmp_getopts/: Cargo.toml
comps/cmp_getopts/benches/: bench-curl.rs  bench-one.rs  bench.rs
comps/cmp_getopts/src/: curl.cmd.help.rs.txt  curl.cmd.lex.rs.txt  curl.cmd.match.rs.txt  curl.rs  main-curl.rs  main-one.rs  one.rs
comps/cmp_getopts/tests/: test-curl.rs  test-one.rs
comps/cmp_getopts/xtask/: Cargo.toml
comps/cmp_getopts/xtask/src/: gen_src_curl_cmd.rs
comps/cmp_gumdrop/: Cargo.toml
comps/cmp_gumdrop/benches/: bench-curl.rs  bench-one.rs  bench.rs
comps/cmp_gumdrop/src/: curl.cmd.help.rs.txt  curl.cmd.match.rs.txt  curl.rs  main-curl.rs  main-one.rs  one.rs
comps/cmp_gumdrop/tests/: test-curl.rs  test-one.rs
comps/cmp_gumdrop/xtask/: Cargo.toml
comps/cmp_gumdrop/xtask/src/: gen_src_curl_cmd.rs
comps/cmp_lapp/: Cargo.toml
comps/cmp_lapp/benches/: bench-curl.rs  bench-one.rs  bench.rs
comps/cmp_lapp/src/: curl.cmd.help.rs.txt  curl.cmd.match.rs.txt  curl.rs  main-curl.rs  main-one.rs  one.rs
comps/cmp_lapp/tests/: test-curl.rs  test-one.rs
comps/cmp_lapp/xtask/: Cargo.toml
comps/cmp_lapp/xtask/src/: gen_src_curl_cmd.rs  lapp.curl.cmd.txt  lib.rs
comps/cmp_null_void/: Cargo.toml
comps/cmp_null_void/benches/: bench-curl.rs  bench-one.rs  bench.rs
comps/cmp_null_void/src/: curl.cmd.help.rs.txt  curl.rs  main-curl.rs  main-one.rs  one.rs
comps/cmp_null_void/tests/: test-curl.rs  test-one.rs
comps/cmp_null_void/xtask/: Cargo.toml
comps/cmp_null_void/xtask/src/: gen_src_curl_cmd.rs
comps/cmp_pico_args/: Cargo.toml
comps/cmp_pico_args/benches/: bench-curl.rs  bench-one.rs  bench.rs
comps/cmp_pico_args/src/: curl.cmd.help.rs.txt  curl.cmd.match.rs.txt  curl.rs  main-curl.rs  main-one.rs  one.rs
comps/cmp_pico_args/tests/: test-curl.rs  test-one.rs
comps/cmp_pico_args/xtask/: Cargo.toml
comps/cmp_pico_args/xtask/src/: gen_src_curl_cmd.rs
comps/cmp_pure_rust/: Cargo.toml
comps/cmp_pure_rust/benches/: bench-curl.rs  bench-one.rs  bench.rs
comps/cmp_pure_rust/src/: curl.cmd.help.rs.txt  curl.cmd.match.rs.txt  curl.rs  main-curl.rs  main-one.rs  one.rs
comps/cmp_pure_rust/tests/: test-curl.rs  test-one.rs
comps/cmp_pure_rust/xtask/: Cargo.toml
comps/cmp_rustop/: Cargo.toml
comps/cmp_rustop/benches/: bench-curl.rs  bench-one.rs  bench.rs
comps/cmp_rustop/src/: curl.cmd.help.rs.txt  curl.cmd.lex.rs.txt  curl.cmd.match.rs.txt  curl.rs  lib.rs  main-curl.rs  main-one.rs  one.rs
comps/cmp_rustop/tests/: test-curl.rs  test-one.rs
comps/cmp_rustop/xtask/: Cargo.toml
comps/cmp_structopt/: Cargo.toml
comps/cmp_structopt/benches/: bench-curl.rs  bench-one.rs  bench.rs
comps/cmp_structopt/src/: curl.cmd.help.rs.txt  curl.cmd.match.rs.txt  curl.rs  main-curl.rs  main-one.rs  one.rs
comps/cmp_structopt/tests/: test-curl.rs  test-one.rs
comps/cmp_structopt/xtask/: Cargo.toml
comps/common/args-2.2.0-hcc/: Cargo.toml
comps/common/exec-target-a/: CHANGELOG.md  Cargo.toml  README.md  build.rs
comps/common/optpaerr-a/: CHANGELOG.md  Cargo.toml  Makefile  README.md
src/: main.rs
xtask/: Cargo.toml  build.rs
xtask/src/: main.rs  shape_benchmark_results.rs
(+58 files in other folders)
