[package]
name = "cmp_commander"
version = "0.1.1"
authors = ["aki <aki.akaguma@hotmail.com>"]
edition = "2018"

[[bin]]
name = "cmp_commander-one"
path = "src/main-one.rs"

[[bin]]
name = "cmp_commander-curl"
path = "src/main-curl.rs"

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "bench-cmp_commander-one"
path = "benches/bench-one.rs"
harness = false

[[bench]]
name = "bench-cmp_commander-curl"
path = "benches/bench-curl.rs"
harness = false

[dependencies]
optcolorwhen = { path="../common/optcolorwhen" }
commander = "=0.1.2"
anyhow = "1.0"
optpaerr-a = { path="../common/optpaerr-a", features=["option_argument"] }

[dev-dependencies]
exec-target-a = { path="../common/exec-target-a" }
criterion = "0.3"
criterion-cycles-per-byte = "0.1"
