[package]
name = "cmp_docopt"
version = "0.1.1"
authors = ["aki <aki.akaguma@hotmail.com>"]
edition = "2018"

[[bin]]
name = "cmp_docopt-one"
path = "src/main-one.rs"

[[bin]]
name = "cmp_docopt-curl"
path = "src/main-curl.rs"

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "bench-cmp_docopt-one"
path = "benches/bench-one.rs"
harness = false

[[bench]]
name = "bench-cmp_docopt-curl"
path = "benches/bench-curl.rs"
harness = false

[dependencies]
optcolorwhen = { path="../common/optcolorwhen" }
docopt = "1.1"
serde_derive = "1.0"
serde = "1.0"
anyhow = "1.0"
optpaerr-a = { path="../common/optpaerr-a" }

[dev-dependencies]
exec-target-a = { path="../common/exec-target-a" }
criterion = "0.3"
criterion-cycles-per-byte = "0.1"
