[package]
name = "cmp_getopts"
version = "0.1.1"
authors = ["aki <aki.akaguma@hotmail.com>"]
edition = "2021"

[[bin]]
name = "cmp_getopts-one"
path = "src/main-one.rs"

[[bin]]
name = "cmp_getopts-curl"
path = "src/main-curl.rs"

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "bench-cmp_getopts-one"
path = "benches/bench-one.rs"
harness = false

[[bench]]
name = "bench-cmp_getopts-curl"
path = "benches/bench-curl.rs"
harness = false

[dependencies]
optcolorwhen = { path="../common/optcolorwhen" }
getopts = "=0.2.21"
anyhow = "1.0"
optpaerr-a = { path="../common/optpaerr-a", features=["option_argument","argument"] }

[dev-dependencies]
exec-target-a = { path="../common/exec-target-a" }
criterion = "0.5"
criterion-cycles-per-byte = "0.5"
