[package]
name = "cmp_gumdrop"
version = "0.1.1"
authors = ["aki <aki.akaguma@hotmail.com>"]
edition = "2018"

[[bin]]
name = "cmp_gumdrop-one"
path = "src/main-one.rs"

[[bin]]
name = "cmp_gumdrop-curl"
path = "src/main-curl.rs"

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "bench-cmp_gumdrop-one"
path = "benches/bench-one.rs"
harness = false

[[bench]]
name = "bench-cmp_gumdrop-curl"
path = "benches/bench-curl.rs"
harness = false

[dependencies]
optcolorwhen = { path="../common/optcolorwhen" }
gumdrop = "=0.8.1"
gumdrop_derive = "=0.8.1"
anyhow = "1.0"
optpaerr-a = { path="../common/optpaerr-a", features=["option_argument","argument"] }

[dev-dependencies]
exec-target-a = { path="../common/exec-target-a" }
criterion = "0.3"
criterion-cycles-per-byte = "0.1"
