[package]
name = "cmp_pure_rust"
version = "0.1.1"
authors = ["aki <aki.akaguma@hotmail.com>"]
edition = "2018"

[[bin]]
name = "cmp_pure_rust-one"
path = "src/main-one.rs"

[[bin]]
name = "cmp_pure_rust-curl"
path = "src/main-curl.rs"

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "bench-cmp_pure_rust-one"
path = "benches/bench-one.rs"
harness = false

[[bench]]
name = "bench-cmp_pure_rust-curl"
path = "benches/bench-curl.rs"
harness = false

[dependencies]
optcolorwhen = { path="../common/optcolorwhen" }
anyhow = "1.0"
optpaerr-a = { path="../common/optpaerr-a", features=["option_argument","argument"] }

[dev-dependencies]
exec-target-a = { path="../common/exec-target-a" }
criterion = "0.3"
criterion-cycles-per-byte = "0.1"

[build-dependencies]
rustc_version = "0.3"
