[package]
name = "cmp_structopt"
version = "0.1.1"
authors = ["aki <aki.akaguma@hotmail.com>"]
edition = "2018"

[[bin]]
name = "cmp_structopt-one"
path = "src/main-one.rs"

[[bin]]
name = "cmp_structopt-curl"
path = "src/main-curl.rs"

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "bench-cmp_structopt-one"
path = "benches/bench-one.rs"
harness = false

[[bench]]
name = "bench-cmp_structopt-curl"
path = "benches/bench-curl.rs"
harness = false

[dependencies]
optcolorwhen = { path="../common/optcolorwhen" }
structopt = "=0.3.25"
structopt-derive = "=0.4.18"
anyhow = "1.0"
optpaerr-a = { path="../common/optpaerr-a" }

[dev-dependencies]
exec-target-a = { path="../common/exec-target-a" }
criterion = "0.3"
criterion-cycles-per-byte = "0.1"
